Fixed fucked up contact photo on safari

--- a/personal-website-app/src/components/Contact.css
+++ b/personal-website-app/src/components/Contact.css
@@ -52,7 +52,6 @@ h1 {
 .contact__image img{
     width: 12rem;
     height: 12rem;
-    transform: rotate(270deg); /* fucked up and compressed the image sideways so this works lol*/
     border-radius: 50%;
     object-fit: cover;
 }
